--- a/src/ComponentStyling/Chart.css
+++ b/src/ComponentStyling/Chart.css
@@ -17,7 +17,7 @@
  .mainChartContainer {
     display: flex;
     flex-direction: row;
-    height:calc(100% - 60px);
+    height:calc(100% - 70px);
     width: calc(100% - 30px);
  }
 
